--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1015,7 +1015,7 @@ TOP SELLING PRODUCTS
 
     display:grid;
 
-    grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns:repeat(2, minmax(0, 1fr));
 
     gap:35px;
 
